fix shift overlay is drawn over the quick edit/tag script box
--HG--
branch : moe
extra : convert_revision : svn%3A2d28d66d-8d94-df11-8c86-00306ef368cb/trunk/moe%40348

--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -1295,6 +1295,9 @@ a.directlink:hover > .directlink-info {
 	padding: 6px;
 	top: 2px;
 	right: 2px;
+
+        /* Draw this over the index shift-key overlays. */
+        z-index: 5;
 }
 
 .post-hover {
